# platform_5ive_replit

./: .gitignore  .replit  API_ENDPOINTS.md  ERROR_LOGGING_API.md  GORGIAS_INTEGRATION.md  MONDAY_INTEGRATION.md  README.md  WORDPRESS_INTEGRATION.md  WORDPRESS_WIDGET_INSTALL.md  ai_lead_extractor.py  app.py  create_test_data.py  email_template_preview.html  github_setup_commands.txt  main.py  models.py  monday_service.py  pyproject.toml  replit.md  routes.py  schemas.py  session_cleanup.py  supabase_service.py
attached_assets/: Chat Sessions Dashboard_1753106661382.csv  Pasted--data-conversation-id-10-m-1754736276252_1754736276252.txt  Pasted-I-am-building-an-admin-dashboard-for-a-client-and-I-need-to-add-a-draggable-resizable-modal-window-1753112298422_1753112298422.txt  Pasted-I-would-like-you-to-implement-a-QA-Quality-Assurance-system-for-the-Sweats-Collective-Email-AI-Das-1749196990666.txt  Pasted-Landing-Page-AI-Lead-Generation-Project-We-are-starting-a-new-project-based-on-an-existing-internal-1754627821256_1754627821258.txt  Pasted-You-are-helping-me-build-a-web-based-admin-dashboard-in-Replit-This-dashboard-is-a-remix-of-an-exis-1753102105553_1753102105554.txt  Rhythm and Vines Session Export Aug 8 2025_1754634059037.txt
static/: app.js
templates/: chat.html  chat_preview.html  embed_chat.html  index.html  login.html
